--- a/MizanLang.Cli/MizanLang.Cli.csproj
+++ b/MizanLang.Cli/MizanLang.Cli.csproj
@@ -1,14 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>MizanLang</RootNamespace>
+        <RootNamespace>MizanLang.Cli</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Sawmill" Version="3.4.0" />
-    </ItemGroup>
 
 </Project>
