--- a/MizanLang/MizanLang.csproj
+++ b/MizanLang/MizanLang.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Pidgin" Version="3.5.1" />
       <PackageReference Include="Sawmill" Version="3.4.0" />
     </ItemGroup>
 
