added printer to cli and updated ReadMe.md examples with their AST

--- a/MizanLang.Cli/MizanLang.Cli.csproj
+++ b/MizanLang.Cli/MizanLang.Cli.csproj
@@ -8,4 +8,8 @@
         <RootNamespace>MizanLang.Cli</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MizanLang\MizanLang.csproj" />
+    </ItemGroup>
+
 </Project>
